--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     ],
     "headers": [
       {
-        "source": "**/*.@(jpg|jpeg|gif|png|js|svg)",
+        "source": "**/*.@(jpg|jpeg|gif|png|js|svg|webp)",
         "headers": [
           {
             "key": "Cache-Control",
