--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           name: public
           path: public
+          retention-days: 1
   deploy:
     name: Deploy
     needs: build
