--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ck-technologies",
+  "name": "nfrost.dev-hugo",
   "version": "1.0.0",
   "main": "package.json",
   "dependencies": {
@@ -15,13 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nfrostdev/ck-technologies.git"
+    "url": "git+https://github.com/nfrostdev/nfrost.dev-hugo.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nfrostdev/ck-technologies/issues"
+    "url": "https://github.com/nfrostdev/nfrost.dev-hugo/issues"
   },
-  "homepage": "https://github.com/nfrostdev/ck-technologies#readme",
+  "homepage": "https://github.com/nfrostdev/nfrost.dev-hugo#readme",
   "description": ""
 }
