--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,5 @@ jobs:
         run: npm install
       - name: Build Site
         run: hugo --minify
+      - name: Write JSON Search File
+        run: node ./assets/js/fulltext-search-json-writer.js
